--- a/index.html
+++ b/index.html
@@ -310,7 +310,9 @@
               </div>
               <div id="idea9" class="accordion-body collapse">
                 <div class="accordion-inner">
-                  <h3>What is it for?</h3>
+		  <h3>What is it?</h3>
+		  <p>Automato is a Python finger for the modern geek.</p>
+                  <h3>What does that even mean?</h3>
                   <p>In the old times, we had <a href="http://en.wikipedia.org/wiki/Finger_protocol">finger</a>, which provided status reports on a articular computer system or person on a network. Let's bring it back from the dead as a new and shiny API.</p>
 		  <p>The goal of Automato is to let you share information (like displaying what files you are currently working on in your project website) and automate stuff (like launching a pull and test suite run in your office computer, by using a website in your phone).</p>
 		  <p>Automato provides an HTTP API to send and receive information, and two simple clients: command line and javascript. It is up to the user to discover ways to use it.</p>
