added password idea

--- a/index.html
+++ b/index.html
@@ -177,8 +177,46 @@
               </div>
               <div id="idea2" class="accordion-body collapse">
                 <div class="accordion-inner">
-                  <p>A password store where you are able to have multiple password repositories, personal and shared.</p>
-                  <p>This sysem should be able to talk with a web interface as wel as trough an API to enable people to build their own interfaces.</p>
+		  <h3>What's it for?</h3>
+		  <p>A hosted application that lets you create boxes and sub-boxes where you can safely keep passwords. These boxes can be shared among users. This allows you to for instance share a set of passwords with your colleagues.</p>
+		  <h3>What features does it have? List them and describe them</h3>
+		  <h4>Sharing</h4>
+		  <p>
+This is the main goal of this project.
+A password box can be shared with another user or group of users. This requires user and group management and different levels of users (a group admin for instance).</p>
+		  <h4>Backend</h4>
+		  <p>This is the server where all passwords are stored.
+The backend should not be able to decode the stored passwords to minimize trust issues.</p>
+		  <h4>Frontend</h4>
+<p>
+The parts where you can access and store passwords.
+These will do some or all of the following items.
+<ul>
+<li>List boxes and passwords</li>
+<li>Store and retrieve passwords</li>
+<li>Manage groups</li>
+<li>Share boxes</li>
+</ul>
+</p>
+<p>
+These are some frontend ideas:
+<ul>
+<li>Website</li>
+<li>Mobile application</li>
+<li>Browser plugin</li>
+<li>Desktop application</li>
+</ul>
+</p>
+<h3>How will we organize ourselves? What features can be developed in parallel?</h3>
+ 
+<p>Teams:<ul>
+<li>Backend</li>
+<li>API (module)</li>
+<li>Website frontend</li>
+<li>When resources permit, browser and/or mobile frontend.</li>
+</ul></p>
+
+
                 </div>
               </div>
             </div>
@@ -357,6 +395,12 @@
                 </div>
               </div>
             </div>
+
+
+
+
+
+
 
           </div>
         </span>
