removed adding of ideas

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <div id="days-left" class="progress progress-warning">
               <div class="bar" style="width: 0%;"></div>
             </div>
-            <h3><span style="color: #bbb">Last day to send your ideas:</span> <span style="color: #777">Sunday, November 11th</span></h3>
+            <h3><span style="color: #bbb">All ideas are in!</span> <span style="color: #777">Check them below.</span></h3>
           </div>
           <a id="form"></a>
           <div class="span4">
@@ -140,7 +140,7 @@
                 <label class="control-label" style="display:none" for="email">Please fill in your email.</label>
                 <input class="span12" type="email" name="email" id="email" title="Your email" placeholder="Your email"/>
               </div>
-              <textarea id="idea" name="idea" rows="8" class="span12" title="Your idea" placeholder="Write your idea here (optional)"></textarea>
+              <textarea id="idea" name="idea" rows="8" class="span12" title="Your idea" placeholder="Write your idea here (optional)" style="display:none"></textarea>
               <div class="controls">
                 <div class="span7"></div>
                 <button id="send-idea" type="submit" class="span5 btn btn-primary">Join!</button>
