--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
       <!-- Example row of columns -->
       <div class="row">
         <span class="span10 offset1">
-          <div class="nav-header"><h1>Current ideas</h1></div>
 
-          <p>The ideas <strong>must</strong> be improved before being selected, but this is a small recollection to show that the people are really interested on the hackaton, please, send us your idea ASAP! Remember that Sunday is the deadline for send it.</p>
+
+          <div class="nav-header"><h1>Candidate Projects</h1></div>
 
           <div class="accordion" id="ideas">
             <div class="accordion-group">
@@ -333,12 +333,6 @@ These are some frontend ideas:
                   </ul>
                 </div>
               </div>
-            </div>
-
-
-
-
-
 
             <div class="accordion-group">
               <div class="accordion-heading">
@@ -398,6 +392,95 @@ These are some frontend ideas:
 
 
 
+            </div>
+
+
+
+
+	  <br/>
+          <div class="nav-header"><h1>Pending</h1></div>
+	  <p>The following ideas are not clear enough to be picked in the Hackathon. If your idea is here, <a href="mailto:oscar.vilaplana@paylogic.eu">send us the missing details!</a>. Take the Candidate Projects above as an example.</p>
+          <div class="accordion" id="pendings">
+            <div class="accordion-group">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" data-toggle="collapse" data-parent="#pendings" href="#pending4">
+                  Map Reduce with redis
+                </a>
+              </div>
+              <div id="pending4" class="accordion-body collapse">
+                <div class="accordion-inner">
+                  <p>A simplified map reduce application using a state machine and redis as a job queue.</p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-group">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" data-toggle="collapse" data-parent="#pendings" href="#pending5">
+                  impressjs generator from markdown
+                </a>
+              </div>
+              <div id="pending5" class="accordion-body collapse">
+                <div class="accordion-inner">
+                  <p>Time ago I've started a project to impress.js easily from markdown files, I got this: <a href="https://github.com/agonzalezro/easyimpress">https://github.com/agonzalezro/easyimpress</a>.<p>
+                  <p>But it could be nice to implement easily all the transictions.</p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-group">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" data-toggle="collapse" data-parent="#pendings" href="#pending6">
+                  Slides generator
+                </a>
+              </div>
+              <div id="pending6" class="accordion-body collapse">
+                <div class="accordion-inner">
+                  <p>A long time ago, in a galaxy far... I saw an application for ipad that make presentations basically letting you do this:</p>
+
+                  <ul>
+                    <li>Select one image for background (fullscreen): we can use some google api or flicker api to get images from internet.</li>
+                    <li>Write text (around a line).</li>
+                    <li>Change the font family text. But the idea is that the text is always trying to be the bigger possible inside this slide.</li>
+                  </ul>
+
+                  <p>Python will be used for save your presentations with your user account, all the backoffice &amp; contact APIs (in case that can not be done from JS). Clien side can be done with backbone.</p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-group">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" data-toggle="collapse" data-parent="#pendings" href="#pending7">
+                  Sleeper Cell (spy game)
+                </a>
+              </div>
+              <div id="pending7" class="accordion-body collapse">
+                <div class="accordion-inner">
+                  <p>Game for group of people that spend some time with each other daily.  Suitable for group working in together in an office. Game Cell consists of 2 Teams (KGB, CIA), people in one Game Cell sould know each other and see each other daily. Game lasts 5 days, every morning some users get message and have to pass it to other members of the team. Some team members are moles working for the opposite team. Mole scores by collecting enemy data.</p>
+                  <p>We would have to build game master which would send messages daily and a site where players can report information they collected.</p>
+                  <p>There could be extensions for the game:</p>
+                  <ul>
+                    <li>Contact member of other Game Cell (other office in your  town).</li>
+                    <li>Use smartphone to drop and retrieve information from contact box in the field(think GPS, smartphone etc) encrypting information with simple cyphers - by hand or using encryption (<a href="https://play.google.com/store/apps/details?id=uk.co.franklinheath.enigmasim&hl=nl">enigma app</a>) or RSA</li>
+                </div>
+              </div>
+            </div>
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -405,6 +488,11 @@ These are some frontend ideas:
           </div>
         </span>
       </div>
+
+</div>
+
+
+
       <div class="row">
 
         <div class="span5 offset1">
